--- a/public/index.html
+++ b/public/index.html
@@ -27,11 +27,10 @@
       crossorigin="anonymous"
     />
 
-    <title>React App</title>
+    <title>Phartist - Who is she?</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
 
     <form name="contact" netlify netlify-honeypot="bot-field" hidden>
       <input type="text" name="happy" />
@@ -39,15 +38,6 @@
       <textarea name="message"></textarea>
     </form>
 
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <div id="root"></div>
   </body>
 </html>
