--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
-    <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+    <form name="contact" netlify hidden>
       <input type="text" name="happy" />
       <input type="email" name="email" />
       <textarea name="message"></textarea>
